--- a/login.html
+++ b/login.html
@@ -9,22 +9,22 @@
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.12/css/all.css" integrity="sha384-G0fIWCsCzJIMAVNQPfjH08cyYaUtMwjJwqiRKxxE/rx96Uroj1BtIQ6MLJuheaO9" crossorigin="anonymous">
 <link href="https://fonts.googleapis.com/css?family=Oswald:400,700" rel="stylesheet"> 
 <link rel="stylesheet" type="text/css" href="main.css">
-	
-	<title>Mike's Portfolio Home</title>
+  
+  <title>Mike's Portfolio About</title>
 
 </head>
-<body id="home-body">
+<body id="login-body">
 
 <nav class="navbar navbar-fixed-top navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand" href="#">Mike's Portfolio</a>
+  <a class="navbar-brand" href="index.html">Mike's Portfolio</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="#"><i class="fas fa-home"></i> Home <span class="sr-only">(current)</span></a>
+      <li class="nav-item">
+        <a class="nav-link" href="index.html"><i class="fas fa-home"></i> Home</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="about.html"><i class="far fa-smile"></i> About</a>
@@ -36,31 +36,19 @@
         <a class="nav-link" href="dogs.html"><i class="far fa-images"></i> Family Dogs</a>
       </li>
     </ul>
-	<ul class="navbar-nav justify-content-end">
-  		<li class="nav-item">
-   		 	<a class="nav-link" href="login.html">Login <i class="fas fa-sign-in-alt"></i></a>
-  		</li>
-  		<li class="nav-item">
-    		<a class="nav-link" href="signup.html">Sign Up <i class="fas fa-user-plus"></i></a>
-  		</li>
-	</ul>
+  <ul class="navbar-nav justify-content-end">
+      <li class="nav-item active">
+        <a class="nav-link" href="#">Login <i class="fas fa-sign-in-alt"></i><span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="signup.html">Sign Up <i class="fas fa-user-plus"></i></a>
+      </li>
+  </ul>
   </div>
 </nav>
 
-<div class="container" id="info">
-	<div class="col-lg-12">
-		<div>
-			<h1>Hello Everyone</h1>
-			<h3>Welcome to my Portfolio Site!</h3>
-			<p>Currently I just have an understading of HTML5, CSS, and Bootstrap. This website will be designed using only these to show what all I know. Once I have a working understanding of Javascript I will work that into this portfolio. Thank you and enjoy!</p>
-		</div>
-	</div>
-</div>
 
-<div class="container" id="me-pic">
-  <div class="col-lg-12">
-  </div>
-</div>
+
 
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
