--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
   </div>
 </nav>
 
-<div class="container" id="info">
+<div class="container first-cont" id="info">
 	<div class="col-lg-12">
 		<div>
 			<h1>Hello Everyone</h1>
@@ -55,11 +55,6 @@
 			<p>Currently I just have an understading of HTML5, CSS, and Bootstrap. This website will be designed using only these to show what all I know. Once I have a working understanding of Javascript I will work that into this portfolio. Thank you and enjoy!</p>
 		</div>
 	</div>
-</div>
-
-<div class="container" id="me-pic">
-  <div class="col-lg-12">
-  </div>
 </div>
 
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
