--- a/about.html
+++ b/about.html
@@ -30,19 +30,13 @@
         <a class="nav-link" href="#"><i class="far fa-smile"></i> About<span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="contact.html"><i class="far fa-address-card"></i> Contact</a>
-      </li>
-      <li class="nav-item">
         <a class="nav-link" href="dogs.html"><i class="far fa-images"></i> Family Dogs</a>
       </li>
     </ul>
 	<ul class="navbar-nav justify-content-end">
   		<li class="nav-item">
-   		 	<a class="nav-link" href="login.html">Login <i class="fas fa-sign-in-alt"></i></a>
-  		</li>
-  		<li class="nav-item">
-    		<a class="nav-link" href="signup.html">Sign Up <i class="fas fa-user-plus"></i></a>
-  		</li>
+        <a class="nav-link" href="contact.html">Contact <i class="far fa-address-card"></i></a>
+      </li>
 	</ul>
   </div>
 </nav>
