--- a/dogs.html
+++ b/dogs.html
@@ -10,7 +10,7 @@
 <link href="https://fonts.googleapis.com/css?family=Oswald:400,700" rel="stylesheet"> 
 <link rel="stylesheet" type="text/css" href="main.css">
 	
-	<title>Mike's Portfolio About</title>
+	<title>Mike's Portfolio Dogs</title>
 
 </head>
 <body id="dogs-body">
@@ -29,20 +29,14 @@
       <li class="nav-item">
         <a class="nav-link" href="about.html"><i class="far fa-smile"></i> About</a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" href="contact.html"><i class="far fa-address-card"></i> Contact</a>
-      </li>
       <li class="nav-item active">
         <a class="nav-link" href="#"><i class="far fa-images"></i> Family Dogs <span class="sr-only">(current)</span></a>
       </li>
     </ul>
 	<ul class="navbar-nav justify-content-end">
   		<li class="nav-item">
-   		 	<a class="nav-link" href="login.html">Login <i class="fas fa-sign-in-alt"></i></a>
-  		</li>
-  		<li class="nav-item">
-    		<a class="nav-link" href="signup.html">Sign Up <i class="fas fa-user-plus"></i></a>
-  		</li>
+        <a class="nav-link" href="contact.html">Contact <i class="far fa-address-card"></i></a>
+      </li>
 	</ul>
   </div>
 </nav>
