--- a/contact.html
+++ b/contact.html
@@ -44,7 +44,7 @@
 <div class="container first-cont">
   <h1>Contact</h1>
   <p>If you would like to reach me please fill out this form with your information and click submit. I will get in contact with you when able. Thanks!</p>
-  <form>
+  <form action="mailto:mikealexmarchlewski@gmail.com" method="post" enctype="text/plain">
     <div class="form-row">
       <div class="form-group col-md-6">
         <label for="inputFirstN">First Name</label>
@@ -74,7 +74,7 @@
         </select>
       </div>
     </div>
-    <p></p>
+    <p>Please select the time frame(s) that work best for me to contact you.</p>
     <div class="form-group">
       <div class="form-check form-check-inline">
         <input class="form-check-input" type="checkbox" id="amCheck">
@@ -99,9 +99,16 @@
         <label class="form-check-label" for="otherCheck">
           Specific Time: 
         </label>
+        <div class="form-group">
+          <input type="text" class="form-control" placeholder="Time">
+        </div>
       </div>
     </div>
-    <button type="submit" class="btn btn-primary" disabled>Submit</button>
+    <div class="form-group">
+      <label for="reasonArea">Please breifly state the reason for contact.</label>
+      <textarea class="form-control" id="reasonArea" rows="3" placeholder="Statement" required></textarea>
+    </div>
+    <button type="submit" value="send" class="btn btn-primary" disabled>Submit</button>
   </form>
 </div>
 
