--- a/contact.html
+++ b/contact.html
@@ -44,7 +44,7 @@
 <div class="container first-cont">
   <h1>Contact</h1>
   <p>If you would like to reach me please fill out this form with your information and click submit. I will get in contact with you when able. Thanks!</p>
-  <form action="mailto:mikealexmarchlewski@gmail.com" method="post" enctype="text/plain">
+  <form>
     <div class="form-row">
       <div class="form-group col-md-6">
         <label for="inputFirstN">First Name</label>
@@ -108,7 +108,7 @@
       <label for="reasonArea">Please breifly state the reason for contact.</label>
       <textarea class="form-control" id="reasonArea" rows="3" placeholder="Statement" required></textarea>
     </div>
-    <button type="submit" value="send" class="btn btn-primary" disabled>Submit</button>
+    <button type="submit" class="btn btn-primary" disabled>Submit</button>
   </form>
 </div>
 
