--- a/about.html
+++ b/about.html
@@ -55,7 +55,7 @@
     </div>
   </div>
   <div class="col-lg-12" id="res-but">
-    <div><a class="btn btn-success" href="https://drive.google.com/open?id=13ZAR2fP0ia-zDcnT7F8GIAmKxkH39Fbz" role="button">Resume</a></div>
+    <div><a class="btn btn-success" href="https://drive.google.com/open?id=13ZAR2fP0ia-zDcnT7F8GIAmKxkH39Fbz" role="button" target="_blank">Resume</a></div>
   </div>
 </div>
 
