--- a/contact.html
+++ b/contact.html
@@ -66,7 +66,7 @@
           <input type="number" class="form-control" id="inputAddress2" placeholder="(xxx)-xxx-xxxx" required>
         </div>
         <div class="form-group col-md-2">
-          <label for="inputMethod">Preferred Method</label>
+          <label for="inputMethod">Preferred:</label>
           <select id="inputMethod" class="form-control" required>
             <option selected>Select</option>
             <option>Email</option>
@@ -98,7 +98,7 @@
         <div class="form-check form-check-inline">
           <input class="form-check-input" type="checkbox" id="otherCheck">
           <label class="form-check-label" for="otherCheck">
-          Specific Time: 
+          Specific: 
           </label>
           <div class="form-group">
             <input type="text" class="form-control" placeholder="Time">
