--- a/about.html
+++ b/about.html
@@ -49,13 +49,21 @@
       </div>
     </div>
     <div class="col-lg-8 col-sm-6">
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. Sed cursus ante dapibus diam. Sed nisi. Nulla quis sem at nibh elementum imperdiet. Duis sagittis ipsum. Praesent mauris. Fusce nec tellus sed augue semper porta. Mauris massa. Vestibulum lacinia arcu eget nulla. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. </p>
+      <p class="p-about">Hi there! My name is Mike Marchlewski and I am an aspiring developer. Currently I am working on front end, but once I have a working understanding will be moving onto back end.</p>
 
-      <p>Curabitur sodales ligula in libero. Sed dignissim lacinia nunc. Curabitur tortor. Pellentesque nibh. Aenean quam. In scelerisque sem at dolor. Maecenas mattis. Sed convallis tristique sem. Proin ut ligula vel nunc egestas porttitor. Morbi lectus risus, iaculis vel, suscipit quis, luctus non, massa. Fusce ac turpis quis ligula lacinia aliquet. Mauris ipsum. Nulla metus metus, ullamcorper vel, tincidunt sed, euismod in, nibh. Quisque volutpat condimentum velit. </p>
+      <p class="p-about">I grew up and currently live in Lewisville TX. In between growing up and now(never truly grew up) I attended Stephen F Austin State University out in Nacogdoches TX, where I graduated with my BA. After college I worked in political campaigns for a time before realizing that life wasn't for me. Now I work as IT support while expanding my understanding of Web Development.</p>
+
+      <p class="p-about">In my off time I enjoy going to hard rock/metal concerts and playing video games. Living in Texas I have grown up with a love of swimming and tend to do that during most of the 6 month summer. I always enjoy learning new things and look forward to what my future holds.</p>
+
+      <p class="p-about">If you would like to know more about my professional history and skills please take a look at my resume. This can be accessed through the Resume button below.</p>
+
+      <p class="p-about" id="tie">Take It Easy</p>
+
+      <p class="p-about">~Mike</p>
     </div>
   </div>
   <div class="col-lg-12" id="res-but">
-    <div><a class="btn btn-success" href="https://drive.google.com/open?id=13ZAR2fP0ia-zDcnT7F8GIAmKxkH39Fbz" role="button" target="_blank">Resume</a></div>
+    <div><a class="btn btn-outline-success" href="https://drive.google.com/open?id=13ZAR2fP0ia-zDcnT7F8GIAmKxkH39Fbz" role="button" target="_blank"><i class="fas fa-file-alt"></i> Resume</a></div>
   </div>
 </div>
 
