--- a/about.html
+++ b/about.html
@@ -43,12 +43,12 @@
 
 <div class="container first-cont">
   <div class="row">
-    <div class="col-lg-4 col-sm-6">
-      <div class="img-thumbnail">
+    <div class="col-sm-4 col-6">
+      <div class="img-thumbnail" id="me-pic">
         <img src="https://scontent-dfw5-1.xx.fbcdn.net/v/t1.0-9/31311351_1694235773985858_438259987597230080_n.jpg?_nc_cat=0&oh=610d60708a092c67add6611ce7a4a4ab&oe=5B963367" class="img-fluid" alt="Me">
       </div>
     </div>
-    <div class="col-lg-8 col-sm-6">
+    <div class="col-sm-8 col-6">
       <p class="p-about">Hi there! My name is Mike Marchlewski and I am an aspiring developer. Currently I am working on front end, but once I have a working understanding will be moving onto back end.</p>
 
       <p class="p-about">I grew up and currently live in Lewisville TX. In between growing up and now(never truly grew up) I attended Stephen F Austin State University out in Nacogdoches TX, where I graduated with my BA. After college I worked in political campaigns for a time before realizing that life wasn't for me. Now I work as IT support while expanding my understanding of Web Development.</p>
