--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   </div>
 </nav>
 
-<div class="container first-cont" id="info">
+<div class="container first-cont" id="index-info">
 	<div class="col-lg-12">
 		<div>
 			<h1>Hello Everyone</h1>
