--- a/projects.html
+++ b/projects.html
@@ -10,10 +10,10 @@
 <link href="https://fonts.googleapis.com/css?family=Oswald:400,700" rel="stylesheet"> 
 <link rel="stylesheet" type="text/css" href="main.css">
 	
-	<title>Mike's Portfolio Dogs</title>
+	<title>Mike's Portfolio Projects</title>
 
 </head>
-<body id="dogs-body">
+<body id="projects-body">
 
 <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
   <a class="navbar-brand" href="index.html">Mike's Portfolio</a>
@@ -30,7 +30,7 @@
         <a class="nav-link" href="about.html"><i class="far fa-smile"></i> About</a>
       </li>
       <li class="nav-item active">
-        <a class="nav-link" href="#"><i class="far fa-images"></i> Family Dogs <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="#"><i class="fas fa-terminal"></i> Projects <span class="sr-only">(current)</span></a>
       </li>
     </ul>
 	<ul class="navbar-nav justify-content-end">
