--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <a class="nav-link" href="about.html"><i class="far fa-smile"></i> About</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="dogs.html"><i class="far fa-images"></i> Family Dogs</a>
+        <a class="nav-link" href="projects.html"><i class="fas fa-terminal"></i> Projects</a>
       </li>
     </ul>
 	<ul class="navbar-nav justify-content-end">
